# test_task_ns

./: .env  .env-non-dev  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cert/: ca.crt
ssl_key/: ca_key.pem
test_task_ns/app/: alembic.ini  clear_database.py  config.py  create_roles.py  create_users.py  main.py
test_task_ns/app/data_sources/: models.py
test_task_ns/app/data_sources/storages/: role_repository.py  token_reposytory.py  user_repository.py
test_task_ns/app/migrations/: env.py
test_task_ns/app/migrations/versions/: e5832bb714cd_db_creations.py
test_task_ns/app/pydantic_models/: pydantic_models.py
test_task_ns/app/views/: crud_for_users.py  login.py  registration.py
test_task_ns/scripts_for_docker/: app.sh
